# tweet-classification

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo_data/train/: labelled.csv
paper/: GISRUKPaperTemplate2015.tex  gisruk_2022.Rmd  references.bib  sdss.Rmd  template.tex
paper/figures/: confusion.R  interpret_transformer.py  workflow_template.drawio
src/: inf.py  run.py
src/common/: get_tweets.py  utils.py
src/datasets/: csv_dataset.py  datamodule.py
src/modules/: classifier_model.py
src/pl_data/: csv_dataset.py  datamodule.py
src/pl_module/: classifier_model.py
